[package]
name = "mim"
version = "0.1.0"
edition = "2021"
license="MIT"
description = """
MIM is a Hash Visualization format utilising 4x4 colour matrixes. This provides a quick and easy method to compare fingerprints, e.g. SSH keys, x509 certs etc.
"""
authors= ["go-compile"]
readme = "README.md"
repository = "https://github.com/go-compile/mim-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hkdf = "0.12.3"
sha2="*"
byteorder = "1.4.3"
hex = "0.4.3"
